Fix mobile x overflow

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -26,19 +26,14 @@
   }
 }
 
-html {
-  padding: 0;
-  margin: 0;
-  background-color: var(--gray-100);
-  color: var(--gray-900);
-}
-
-body {
+html, body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
   font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
+  background-color: var(--gray-100);
+  color: var(--gray-900);
 }
 
 a {
